# variChat

./: README.md  docker-compose.yaml  go.mod  go.sum  init.sql  prometheus.yml  run.sh  test.sh
clib/: CMakeLists.txt  engine.cpp  engine.h
client/: client.go
go/cmd/api/: main.go
go/internal/api/: handlers.go  server.go
go/internal/cgobridge/: cgobridge.go  cgobridge_test.go
go/internal/db/: db.go  model.go  redis.go  repository.go
go/internal/metrics/: metrics.go
go/internal/service/: service.go
